--- a/packages/storybook-html/stories/components/core/colour-apply.story.mdx
+++ b/packages/storybook-html/stories/components/core/colour-apply.story.mdx
@@ -19,7 +19,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <div className="uqds-colour__palette uqds-colour--purple-500"></div>
       </td>
       <td className="uqds-table__item" data-title="Variable:">
-        <code>$purple-500</code> 
+        <code>$purple-500</code>
       </td>
       <td className="uqds-table__item" data-title="HEX:">
         <code>#51247a</code>
@@ -33,7 +33,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <div className="uqds-colour__palette uqds-colour--purple-600"></div>
       </td>
       <td className="uqds-table__item" data-title="Variable:">
-        <code>$purple-600</code> 
+        <code>$purple-600</code>
       </td>
       <td className="uqds-table__item" data-title="HEX:">
         <code>#4B2271</code>
@@ -47,7 +47,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <div className="uqds-colour__palette uqds-colour--purple-650"></div>
       </td>
       <td className="uqds-table__item" data-title="Variable:">
-        <code>$purple-650</code> 
+        <code>$purple-650</code>
       </td>
       <td className="uqds-table__item" data-title="HEX:">
         <code>#40205d</code>
@@ -61,7 +61,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <div className="uqds-colour__palette uqds-purple-gradient"></div>
       </td>
       <td className="uqds-table__item" data-title="Variable:">
-        <code>$purple-gradient</code> 
+        <code>$purple-gradient</code>
       </td>
       <td className="uqds-table__item" data-title="HEX:">
         -
@@ -75,7 +75,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <div className="uqds-colour__palette uqds-colour--black"></div>
       </td>
       <td className="uqds-table__item" data-title="Variable:">
-        <code>$black</code> 
+        <code>$black</code>
       </td>
       <td className="uqds-table__item" data-title="HEX:">
         <code>#19151c</code>
@@ -89,7 +89,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <div className="uqds-colour__palette uqds-colour--grey-900"></div>
       </td>
       <td className="uqds-table__item" data-title="Variable:">
-        <code>$grey-900</code> 
+        <code>$grey-900</code>
       </td>
       <td className="uqds-table__item" data-title="HEX:">
         <code>#3b383e</code>
@@ -103,7 +103,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <div className="uqds-colour__palette uqds-colour--grey-700"></div>
       </td>
       <td className="uqds-table__item" data-title="Variable:">
-        <code>$grey-700</code> 
+        <code>$grey-700</code>
       </td>
       <td className="uqds-table__item" data-title="HEX:">
         <code>#757377</code>
@@ -117,7 +117,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <div className="uqds-colour__palette uqds-colour--grey-300"></div>
       </td>
       <td className="uqds-table__item" data-title="Variable:">
-        <code>$grey-300</code> 
+        <code>$grey-300</code>
       </td>
       <td className="uqds-table__item" data-title="HEX:">
         <code>#d1d0d2</code>
@@ -131,7 +131,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <div className="uqds-colour__palette uqds-colour--grey-200"></div>
       </td>
       <td className="uqds-table__item" data-title="Variable:">
-        <code>$grey-200</code> 
+        <code>$grey-200</code>
       </td>
       <td className="uqds-table__item" data-title="HEX:">
         <code>#dcdcdd</code>
@@ -145,7 +145,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <div className="uqds-colour__palette uqds-colour--grey-50"></div>
       </td>
       <td className="uqds-table__item" data-title="Variable:">
-        <code>$grey-50</code> 
+        <code>$grey-50</code>
       </td>
       <td className="uqds-table__item" data-title="HEX:">
         <code>#f3f3f4</code>
@@ -159,7 +159,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <div className="uqds-colour__palette uqds-colour--white"></div>
       </td>
       <td className="uqds-table__item" data-title="Variable:">
-        <code>$white</code> 
+        <code>$white</code>
       </td>
       <td className="uqds-table__item" data-title="HEX:">
         <code>#ffffff</code>
@@ -173,7 +173,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <div className="uqds-colour__palette uqds-colour--utility-500"></div>
       </td>
       <td className="uqds-table__item" data-title="Variable:">
-        <code>$utility-500</code> 
+        <code>$utility-500</code>
       </td>
       <td className="uqds-table__item" data-title="HEX:">
         <code>#0d6dcd</code>
@@ -187,7 +187,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <div className="uqds-colour__palette uqds-colour--utility-50"></div>
       </td>
       <td className="uqds-table__item" data-title="Variable:">
-        <code>$utility-50</code> 
+        <code>$utility-50</code>
       </td>
       <td className="uqds-table__item" data-title="HEX:">
         <code>#e7f0fa</code>
@@ -196,12 +196,12 @@ For consistency, we use the below defined colour palette throughout our interfac
         Primary colour. Used for primary button and link text
       </td>
     </tr>
-        <tr className="uqds-table__row">
+    <tr className="uqds-table__row">
       <td className="uqds-table__item">
         <div className="uqds-colour__palette uqds-colour--error-500"></div>
       </td>
       <td className="uqds-table__item" data-title="Variable:">
-        <code>$error-500</code> 
+        <code>$error-500</code>
       </td>
       <td className="uqds-table__item" data-title="HEX:">
         <code>#d62929</code>
@@ -215,7 +215,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <div className="uqds-colour__palette uqds-colour--error-50"></div>
       </td>
       <td className="uqds-table__item" data-title="Variable:">
-        <code>$error-50</code> 
+        <code>$error-50</code>
       </td>
       <td className="uqds-table__item" data-title="HEX:">
         <code>#fbeaea</code>
@@ -224,12 +224,12 @@ For consistency, we use the below defined colour palette throughout our interfac
         Primary colour. Used for primary button and link text
       </td>
     </tr>
-        <tr className="uqds-table__row">
+    <tr className="uqds-table__row">
       <td className="uqds-table__item">
         <div className="uqds-colour__palette uqds-colour--warning-500"></div>
       </td>
       <td className="uqds-table__item" data-title="Variable:">
-        <code>$warning-500</code> 
+        <code>$warning-500</code>
       </td>
       <td className="uqds-table__item" data-title="HEX:">
         <code>#f7ba1e</code>
@@ -243,7 +243,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <div className="uqds-colour__palette uqds-colour--warning-50"></div>
       </td>
       <td className="uqds-table__item" data-title="Variable:">
-        <code>$warning-50</code> 
+        <code>$warning-50</code>
       </td>
       <td className="uqds-table__item" data-title="HEX:">
         <code>#fef8e8</code>
@@ -252,12 +252,12 @@ For consistency, we use the below defined colour palette throughout our interfac
         Primary colour. Used for primary button and link text
       </td>
     </tr>
-        <tr className="uqds-table__row">
+    <tr className="uqds-table__row">
       <td className="uqds-table__item">
         <div className="uqds-colour__palette uqds-colour--success-500"></div>
       </td>
       <td className="uqds-table__item" data-title="Variable:">
-        <code>$success-500</code> 
+        <code>$success-500</code>
       </td>
       <td className="uqds-table__item" data-title="HEX:">
         <code>#4aa74e</code>
@@ -271,7 +271,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <div className="uqds-colour__palette uqds-colour--success-50"></div>
       </td>
       <td className="uqds-table__item" data-title="Variable:">
-        <code>$success-50</code> 
+        <code>$success-50</code>
       </td>
       <td className="uqds-table__item" data-title="HEX:">
         <code>#edf6ed</code>
@@ -334,15 +334,33 @@ Our colours are created based off these scales below. If darker or lighter shade
 
 <div class="uqds-colour__swatches">
   <div className="uqds-colour__palette uqds-colour--utility-50">utility-50</div>
-  <div className="uqds-colour__palette uqds-colour--utility-100">utility-100</div>
-  <div className="uqds-colour__palette uqds-colour--utility-200">utility-200</div>
-  <div className="uqds-colour__palette uqds-colour--utility-300">utility-300</div>
-  <div className="uqds-colour__palette uqds-colour--utility-400">utility-400</div>
-  <div className="uqds-colour__palette uqds-colour--utility-500">utility-500</div>
-  <div className="uqds-colour__palette uqds-colour--utility-600">utility-600</div>
-  <div className="uqds-colour__palette uqds-colour--utility-700">utility-700</div>
-  <div className="uqds-colour__palette uqds-colour--utility-800">utility-800</div>
-  <div className="uqds-colour__palette uqds-colour--utility-900">utility-900</div>
+  <div className="uqds-colour__palette uqds-colour--utility-100">
+    utility-100
+  </div>
+  <div className="uqds-colour__palette uqds-colour--utility-200">
+    utility-200
+  </div>
+  <div className="uqds-colour__palette uqds-colour--utility-300">
+    utility-300
+  </div>
+  <div className="uqds-colour__palette uqds-colour--utility-400">
+    utility-400
+  </div>
+  <div className="uqds-colour__palette uqds-colour--utility-500">
+    utility-500
+  </div>
+  <div className="uqds-colour__palette uqds-colour--utility-600">
+    utility-600
+  </div>
+  <div className="uqds-colour__palette uqds-colour--utility-700">
+    utility-700
+  </div>
+  <div className="uqds-colour__palette uqds-colour--utility-800">
+    utility-800
+  </div>
+  <div className="uqds-colour__palette uqds-colour--utility-900">
+    utility-900
+  </div>
 </div>
 
 #### Error
@@ -364,28 +382,64 @@ Our colours are created based off these scales below. If darker or lighter shade
 
 <div class="uqds-colour__swatches">
   <div className="uqds-colour__palette uqds-colour--warning-50">warning-50</div>
-  <div className="uqds-colour__palette uqds-colour--warning-100">warning-100</div>
-  <div className="uqds-colour__palette uqds-colour--warning-200">warning-200</div>
-  <div className="uqds-colour__palette uqds-colour--warning-300">warning-300</div>
-  <div className="uqds-colour__palette uqds-colour--warning-400">warning-400</div>
-  <div className="uqds-colour__palette uqds-colour--warning-500">warning-500</div>
-  <div className="uqds-colour__palette uqds-colour--warning-600">warning-600</div>
-  <div className="uqds-colour__palette uqds-colour--warning-700">warning-700</div>
-  <div className="uqds-colour__palette uqds-colour--warning-800">warning-800</div>
-  <div className="uqds-colour__palette uqds-colour--warning-900">warning-900</div>
+  <div className="uqds-colour__palette uqds-colour--warning-100">
+    warning-100
+  </div>
+  <div className="uqds-colour__palette uqds-colour--warning-200">
+    warning-200
+  </div>
+  <div className="uqds-colour__palette uqds-colour--warning-300">
+    warning-300
+  </div>
+  <div className="uqds-colour__palette uqds-colour--warning-400">
+    warning-400
+  </div>
+  <div className="uqds-colour__palette uqds-colour--warning-500">
+    warning-500
+  </div>
+  <div className="uqds-colour__palette uqds-colour--warning-600">
+    warning-600
+  </div>
+  <div className="uqds-colour__palette uqds-colour--warning-700">
+    warning-700
+  </div>
+  <div className="uqds-colour__palette uqds-colour--warning-800">
+    warning-800
+  </div>
+  <div className="uqds-colour__palette uqds-colour--warning-900">
+    warning-900
+  </div>
 </div>
 
 #### Success
 
 <div class="uqds-colour__swatches">
   <div className="uqds-colour__palette uqds-colour--success-50">success-50</div>
-  <div className="uqds-colour__palette uqds-colour--success-100">success-100</div>
-  <div className="uqds-colour__palette uqds-colour--success-200">success-200</div>
-  <div className="uqds-colour__palette uqds-colour--success-300">success-300</div>
-  <div className="uqds-colour__palette uqds-colour--success-400">success-400</div>
-  <div className="uqds-colour__palette uqds-colour--success-500">success-500</div>
-  <div className="uqds-colour__palette uqds-colour--success-600">success-600</div>
-  <div className="uqds-colour__palette uqds-colour--success-700">success-700</div>
-  <div className="uqds-colour__palette uqds-colour--success-800">success-800</div>
-  <div className="uqds-colour__palette uqds-colour--success-900">success-900</div>
+  <div className="uqds-colour__palette uqds-colour--success-100">
+    success-100
+  </div>
+  <div className="uqds-colour__palette uqds-colour--success-200">
+    success-200
+  </div>
+  <div className="uqds-colour__palette uqds-colour--success-300">
+    success-300
+  </div>
+  <div className="uqds-colour__palette uqds-colour--success-400">
+    success-400
+  </div>
+  <div className="uqds-colour__palette uqds-colour--success-500">
+    success-500
+  </div>
+  <div className="uqds-colour__palette uqds-colour--success-600">
+    success-600
+  </div>
+  <div className="uqds-colour__palette uqds-colour--success-700">
+    success-700
+  </div>
+  <div className="uqds-colour__palette uqds-colour--success-800">
+    success-800
+  </div>
+  <div className="uqds-colour__palette uqds-colour--success-900">
+    success-900
+  </div>
 </div>
