--- a/packages/storybook-html/stories/docs/layout/layout.story.mdx
+++ b/packages/storybook-html/stories/docs/layout/layout.story.mdx
@@ -2,7 +2,7 @@ import "./layout.scss";
 import { Meta, Story } from "@storybook/addon-docs";
 
 <Meta
-  title="Layout/Layout system"
+  title="Deprecated/Layout system"
   parameters={{ layout: "fullscreen", docs: { inlineStories: false } }}
 />
 
