colour doco fixes

--- a/packages/storybook-html/stories/components/core/colour.story.mdx
+++ b/packages/storybook-html/stories/components/core/colour.story.mdx
@@ -1,8 +1,11 @@
 import { Meta, Story, Preview } from "@storybook/addon-docs";
+import "./_colour.scss";
 
-<Meta title="Core/Colour/Applying colour" />
+<Meta title="Core/Colour" />
 
-# Applying colour
+# Colour
+
+## Applying colour
 
 For consistency, we use the below defined colour palette throughout our interface. Keep in mind that green, red and yellow are only used in special cases like alerts and messaging.
 
