docs: added hero documentation in storybook

--- a/packages/storybook-html/stories/layout/sections/sections.docs.mdx
+++ b/packages/storybook-html/stories/layout/sections/sections.docs.mdx
@@ -18,6 +18,8 @@ Use the `.uq-sections` element anywhere you need to provide **section spacing**.
 Any child element will be spaced correctly providing it does not implement its
 own `margin` property.
 
+`.uq-sections` elements can be safely nested within each other as needed.
+
 <Canvas withSource="none">
   <Story id="layout-sections--sections" />
 </Canvas>
